--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,40 @@
     <meta charset="UTF-8">
     <meta name="keywords" content="Udai Arora, portfolio, Masters, Computer Science, Arizona State University, Hewlett-Packard, Intel">
     <meta name="description" content="Udai is a Master's student at Arizona State University (Go Sundevils!). He is majoring in Computer Science. That's enough talking in third person for him.">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
     <title>Udai Arora | Portfolio</title>
 
+    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
+
+	<script src="lib/jquery-2.1.1.min.js" type="text/javascript"></script>
+	<script src="lib/jquery.mCustomScrollbar.concat.min.js" type="text/javascript"></script>
+	<script src="main.js"></script>
+
+	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css">
+	<link rel="stylesheet" href="lib/jquery.mCustomScrollbar.css">
+
+	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+	<div class="main-content">
+
+		<div class="intro-section cast-shadow">
+			<div class="back"></div>
+			<div class="back blurred"></div>
+			<div class="content">
+				<div id="head-text" class="spcl-text fixed-then-move">
+					<div class="inline avatar-holder"><img src="img/avatar.jpg" alt="Avatar" class="avatar"></div>
+					<div class="inline">I am <br/><span class="bold">UDAI ARORA</span><br/>and I<br/><span class="bold">BUILD STUFF</span></div>
+				</div>
+			</div>
+		</div>
+
+		<div>
+			
+		</div>
+	</div>
     
 </body>
 
