--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="keywords" content="Udai Arora, portfolio, Masters, Computer Science, Arizona State University, Hewlett-Packard, Intel">
-    <meta name="description" content="Udai is a Master's student at Arizona State University (Go Sundevils!). He is majoring in Computer Science. That's enough talking in third person for him.">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	<meta charset="UTF-8">
+	<meta name="keywords" content="Udai Arora, portfolio, Masters, Computer Science, Arizona State University, Hewlett-Packard, Intel">
+	<meta name="description" content="Udai is a Master's student at Arizona State University (Go Sundevils!). He is majoring in Computer Science. That's enough talking in third person for him.">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
-    <title>Udai Arora | Portfolio</title>
+	<title>Udai Arora | Portfolio</title>
 
-    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
+	<link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
 
 	<script src="lib/jquery-2.1.1.min.js" type="text/javascript"></script>
 	<script src="lib/jquery.mCustomScrollbar.concat.min.js" type="text/javascript"></script>
@@ -17,29 +17,224 @@
 
 	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css">
 	<link rel="stylesheet" href="lib/jquery.mCustomScrollbar.css">
+	<link rel="stylesheet" href="lib/progress.css">
+	<link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+	<div class="foo"><img src="img/logo.png"/><br/><br/><div class="story-heading-loading">
+					<div class="meter">
+						<span id="progress" style="width: 0%"></span>
+					</div></div></div>
 	<div class="main-content">
+		<ul id="nav">
+			<li><a href="#intro" title="Bio"><img src="img/dot.png" alt="Link" /></a></li>
+			<li><a href="#second" title="Résumé"><img src="img/dot.png" alt="Link" /></a></li>
+			<li><a href="#third" title="Contact"><img src="img/dot.png" alt="Link" /></a></li>
+		</ul>
 
 		<div class="intro-section cast-shadow">
 			<div class="back"></div>
 			<div class="back blurred"></div>
-			<div class="content">
+			<div class="h-content">
 				<div id="head-text" class="spcl-text fixed-then-move">
 					<div class="inline avatar-holder"><img src="img/avatar.jpg" alt="Avatar" class="avatar"></div>
 					<div class="inline">I am <br/><span class="bold">UDAI ARORA</span><br/>and I<br/><span class="bold">BUILD STUFF</span></div>
 				</div>
 			</div>
+
 		</div>
 
-		<div>
-			
+
+
+
+
+
+		<div class="story-container">
+			<div id="intro" class="img-cover">
+				<div class="story">
+					<div class="bg1"></div>
+					<div class="float-left">
+						<div class="story-heading">In a nutshell.</div>
+					</div>
+				</div>
+			</div>
+			<div class="detailed-content grey-bg">
+				<div class="content">
+					<div>
+						Udai is a Master's student at Arizona State University (Go Sundevils!). He is majoring in Computer Science. That's enough talking in third person for him. <br>I am a developer who has a passion to enhance or improve anything technology related. I interned in Hewlett-Packard R&amp;D, Bangalore for 8 months starting January 2012, after which I worked in the same company for an year. I was also an intern at Wipro and Videocon in the summer of 2010 and 2011 respectively.<br>Some stats about me:<br>Height : About the height of a Giant Panda (Sitting down)<br>Weight : Depends on how heavy breakfast I have had.<br>
+					</div><br>
+					<div class="spin-text">
+						<span><img class="breath" id="change-text" src="img/round-arrow.png" alt="Click Me" title="Click Me"/></span>
+						<span>
+							I am 
+						</span>
+						<span class="spinning-text">
+							<span class="visible">not a nerd. I have cool glasses and ironic T-Shirts. That makes me a Geek!</span>
+							<span class="hidden">a gadget freak (so when is the Nexus 6 coming out?)</span>
+							<span class="hidden">anti- ie6 (there! I said it! You heard me!)</span>
+							<span class="hidden">hungry (for knowledge, of course)</span>
+							<span class="hidden">anti- flash (go HTML5!)</span>
+							<span class="hidden">a music junkie (and I mean it- a music friggin JUNKIE)</span>
+							<span class="hidden">Batman.</span>
+							<span class="hidden">a believer of the fact that there are only 10 types of people in this world (Those who understand binary and those who don't)</span>
+						</span>
+					</div>
+				</div>
+			</div>
 		</div>
+
+
+
+
+		<div class="story-container">
+			<div id="second" class="img-cover">
+				<div class="story">
+					<div class="float-left">
+						<div class="story-heading">Résumé.</div>
+
+					</div>
+				</div> <!--.story-->
+			</div> <!--#second-->
+			<div class="detailed-content grey-bg">
+				<div class="content">
+					<div class="center"><a href="assets/Udai_Arora_Resume.pdf" target="_blank"><img src="img/pdfDownload.png"/>&nbsp;You can download the Résumé by clicking here</a><br/>
+						<br/>Here is the snapshot of the same:
+					</div>
+
+
+					<div class="resume">
+
+						<div class="res-block">
+							<div class="res-title">The Weapons</div>
+							<div class="res-content">
+								<u>Programming/Web skills</u>: Python, Java, PHP, JSP, HTML 5, CSS3, JavaScript, JQuery, Bootstrap, Node.js, MySQL, Adobe Photoshop, C, C++, C#, etc<br><br>
+								<u>Operating systems</u>: Windows, Ubuntu, iOS, FreeBSD, Android.<br><br>
+								<u>Misc</u>: Cloud Computing (SaaS; PaaS; IaaS), Big Data, Service Oriented Computing, Git/Gitbash, Eclipse, Sublime Text, Xcode, Microsoft Office, Visual Studio, etc
+							</div>
+						</div>
+
+						<div class="res-block">
+							<div class="res-title">The Numbers</div>
+							<div class="res-content">
+								<table>
+									<tr>
+										<th>Level</th>
+										<th>University/School</th>
+										<th>Completion</th>
+										<th>%/GPA</th>
+									</tr>
+									<tr>
+										<td>MS (CS)</td>
+										<td>Arizona State University</td>
+										<td>2015</td>
+										<td>3.72 CGPA (4)</td>
+									</tr>
+									<tr>
+										<td>BE (CS)</td>
+										<td>Manipal Institute of Technology, Manipal</td>
+										<td>2012</td>
+										<td>7.72 CGPA (10)</td>
+									</tr>
+									<tr>
+										<td>10+2</td>
+										<td>Apeejay School, Sheikh Sarai, New Delhi</td>
+										<td>2008</td>
+										<td>84%</td>
+									</tr>
+									<tr>
+										<td>10</td>
+										<td>Apeejay School, Sheikh Sarai, New Delhi</td>
+										<td>2006</td>
+										<td>80.4%</td>
+									</tr>
+								</table>
+							</div>
+						</div>
+
+						<div class="res-block">
+							<div class="res-title">The Training</div>
+							<div class="res-content">
+								Currently grading and giving Feedback to Students on their Python assignments and assisting Prof with the course (CST 100- Object Oriented Software Devp). <br/><br/>Worked as a Front-End Engineer in HP Labs from August 2012- August 2013. Responsibilities included building various prototypes and User Experience for products. The User Experience was aimed at elevating technical complexities to a usable product. The prototypes and products included a Reservation System- used by gate agents to book tickets and add services; a Departure Control system- to manage check-ins. These modules aim to replace the current command line interface used by gate agents and at the same time, maintain their efficiency. A product called EMD was also built which is to be used by Airports and Airlines to manage ancillary fees and services. Customers included Swiss Air, American Airlines, Air China, Brussels and Olympic. A Windows 8 app and an Android app for the Reservation System was developed, thereby giving our Customers a true Cross-Platform Experience. <br/><br/>
+								7 month industrial training at HP Labs, Bangalore from 12th January 2012 to 17th August 2012: “Front End Framework Development for a Consumer Travel Platform” <br/><br/>
+								2 Month industrial training at Videocon, Gurgaon in IT division during June-July 2011: “Design & Development of the Business Intelligence Tool of Videocon”. <br/><br/>
+								2 Month summer training at Wipro, Gurgaon during June-July 2010: “Online Repository Creation and Document Version Control for Wipro-Uninor engagement”.
+							</div>
+						</div>
+
+						<div class="res-block">
+							<div class="res-title">The Paperwork</div>
+							<div class="res-content">
+								<a target="_blank" href="http://www.ijcaonline.org/archives/volume55/number12/8808-3094">“Architecture for Raw Data Processing at Sensor Nodes in Semantic Wireless Sensor Networks” Arora, Udai, Kumar, Archana. International Journal of Computer Applications, New York. Volume 55- No. 12.</a><br/><br/>
+								<a target="_blank" href="http://www.e-ijaet.org/media/44I10-IJAET1009277-A-TEMPLATE-SYSTEM.pdf">“A template system perspective to faster, lower cost and quality web application development” Arora, Udai. International Journal of Advances in Engineering & Technology, Sept 2012</a>
+							</div>
+						</div>
+
+						<div class="res-block">
+							<div class="res-title">The Campaigns</div>
+							<div class="res-content">
+								WebRTC and MobiCloud based Video Chat application with capabilities such as screen sharing, chat etc. It uses WebRTC API, ICE framework (STUN/TURN), signaling mechanism using a NodeJS server and a few other technologies to establish a peer to peer connection between several clients. 
+								<br><br>Added 3 new features to the open source learning community called “Moodle”. They are- Alias Names, Synergic Answers and Autonomous Extra Credits. 
+								<br><br>Object Oriented Inventory Management System- This was a freelance project aimed at building an online system which will help a large construction firm manage inventories across various construction sites and giving different user types, different access rights. The system also included options for generating purchase orders and was successfully deployed.
+								<br><br>Google Chrome Extensions to help user change the theme of chrome with a single click and one to access apps from the URL bar. 
+								<br><br>Built the long overdue portfolio website (<a href="http://www.udaiarora.com">www.udaiarora.com</a>).
+								<br><br>Currently building a Facebook app to help enable “A Chat as invisible” mode in Facebook. This will help a FB user to see which of its friends are online without actually turning on the FB Chat. The app will also include an option for notifying the user once a selected friend is online.
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+
+
+
+
+		<div class="story-container">
+			<div id="third" class="img-cover">
+				<div class="story">
+					<div class="bg1"></div>
+					<div class="bg2"></div>
+					<div class="bg3"></div>
+					<div class="float-left">
+						<div class="story-heading">Contact.</div>
+					</div>
+				</div> <!--.story-->
+			</div> <!--#third-->
+			<div class="detailed-content grey-bg">
+				<div class="content">
+					<div class="social center">
+						My virtual presence: <br/><br/>
+						<div><a target="_blank" href="http://www.linkedin.com/in/udaiarora"><img  src="img/social/linkedin-icon.png"/></a><a target="_blank" href="https://plus.google.com/113057793043174674680"><img  src="img/social/google-icon.png"/></a></div>
+
+						<div><a target="_blank" href="http://www.facebook.com/udaiarora"><img  src="img/social/facebook-icon.png"/></a><a target="_blank" href="http://www.twitter.com/udaiarora"><img  src="img/social/twitter-icon.png"/></a></div>
+
+						<div><a target="_blank" href="http://pinterest.com/udaiarora/"><img  src="img/social/pinterest-icon.png"/></a><a target="_blank" href="http://www.quora.com/Udai-Arora"><img  src="img/social/quora-icon.png"/></a></div>
+					</div>
+					<div class="social center">
+
+						<div>
+							You can tell me you deepest secrets, just say hello or ask me things. I am also looking for Internship opportunities for Summer 2014. Shoot me an e-mail <br/><br/>
+							<div class="center">
+								<img src="img/social/Places-mail-message-icon.png"><div><a href="mailto: udaiarora@gmail.com">udaiarora@gmail.com</a></div>
+							</div>
+						</div>
+					</div>
+
+					<div>
+
+					</div>
+				</div>
+			</div>
+		</div>	
+
+
+
+
+
 	</div>
-    
 </body>
 
 </html>
