--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
 
 	<script src="lib/jquery-2.1.1.min.js" type="text/javascript"></script>
 	<script src="lib/jquery.mCustomScrollbar.concat.min.js" type="text/javascript"></script>
+	<script src="lib/jquery.tagcanvas.min.js" type="text/javascript"></script>
 	<script src="main.js"></script>
 
 	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css">
@@ -64,7 +65,7 @@
 			<div class="detailed-content grey-bg">
 				<div class="content">
 					<div>
-						Udai is a Master's student at Arizona State University (Go Sundevils!). He is majoring in Computer Science. That's enough talking in third person for him. <br>I am a developer who has a passion to enhance or improve anything technology related. I interned in Hewlett-Packard R&amp;D, Bangalore for 8 months starting January 2012, after which I worked in the same company for an year. I was also an intern at Wipro and Videocon in the summer of 2010 and 2011 respectively.<br>Some stats about me:<br>Height : About the height of a Giant Panda (Sitting down)<br>Weight : Depends on how heavy breakfast I have had.<br>
+						Udai is a Master's student at Arizona State University (Go Sundevils!). He is majoring in Computer Science. That's enough talking in third person for him. <br>I am a developer who has a passion to enhance or improve anything technology related. I interned in Hewlett-Packard R&amp;D, Bangalore for 8 months starting January 2012, after which I worked in the same company for a year. I was also an intern at Wipro and Videocon in the summer of 2010 and 2011 respectively.<br>Some stats about me:<br>Height : About the height of a Giant Panda (Sitting down)<br>Weight : Depends on how heavy breakfast I have had.<br>
 					</div><br>
 					<div class="spin-text">
 						<span><img class="breath" id="change-text" src="img/round-arrow.png" alt="Click Me" title="Click Me"/></span>
@@ -153,10 +154,30 @@
 								</table>
 							</div>
 						</div>
+						
 
 						<div class="res-block">
 							<div class="res-title">The Training</div>
 							<div class="res-content">
+							<div class="tag-cloud center">
+								<canvas id="tagCanvas">
+							        <p>Anything in here will be replaced on browsers that support the canvas element</p>
+						        </canvas>
+								<div id="tags">
+									<ul>
+										<li><a>Design and Analysis of Algorithms</a></li>
+										<li><a>Technologies for Online Learning Communities</a></li>
+										<li><a>Cloud Computing</a></li>
+										<li><a>Software Integration and Engineering</a></li>
+										<li><a>Software Design</a></li>
+										<li><a>Information Retrieval, Mining, and Integration</a></li>
+										<li><a>Distributed/Multiprocess Operating Systems</a></li>
+										<li><a>Software Security</a></li>
+										<li><a>Data Mining</a></li>
+									</ul>
+								</div>
+							</div>
+							<br>
 								Currently grading and giving Feedback to Students on their Python assignments and assisting Prof with the course (CST 100- Object Oriented Software Devp). <br/><br/>Worked as a Front-End Engineer in HP Labs from August 2012- August 2013. Responsibilities included building various prototypes and User Experience for products. The User Experience was aimed at elevating technical complexities to a usable product. The prototypes and products included a Reservation System- used by gate agents to book tickets and add services; a Departure Control system- to manage check-ins. These modules aim to replace the current command line interface used by gate agents and at the same time, maintain their efficiency. A product called EMD was also built which is to be used by Airports and Airlines to manage ancillary fees and services. Customers included Swiss Air, American Airlines, Air China, Brussels and Olympic. A Windows 8 app and an Android app for the Reservation System was developed, thereby giving our Customers a true Cross-Platform Experience. <br/><br/>
 								7 month industrial training at HP Labs, Bangalore from 12th January 2012 to 17th August 2012: “Front End Framework Development for a Consumer Travel Platform” <br/><br/>
 								2 Month industrial training at Videocon, Gurgaon in IT division during June-July 2011: “Design & Development of the Business Intelligence Tool of Videocon”. <br/><br/>
