Changed the viewport for mobile

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
 	<meta charset="UTF-8">
 	<meta name="keywords" content="Udai Arora, portfolio, Masters, Computer Science, Arizona State University, Hewlett-Packard, Intel">
 	<meta name="description" content="Udai is a Master's student at Arizona State University (Go Sundevils!). He is majoring in Computer Science. That's enough talking in third person for him.">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	<!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"> -->
+	<meta name="viewport" content="width=960">
 
 	<title>Udai Arora | Portfolio</title>
 
